[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-graphql = "7.0.5"
async-graphql-axum = "7.0.5"
axum = { version = "0.7.5", default-features = false }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["cors"] }
tower-service = "0.3.2"
wasm-bindgen-futures = "0.4.42"
worker = { version = "0.3.0", features = ["http", "axum"] }
worker-macros = { version = "0.3.0", features = ["http"] }

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
